# cud_analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  ADVANCED_FEATURES.md  AGENTS.md  DOCUMENTATION.md  FINAL_DELIVERABLES.md  INSIGHTS.md  LICENSE  Makefile  README.md  USER_GUIDE.md  advanced_finops_analytics.py  cloud_finops_ultimate_all_in_one.py  cloud_finops_ultimate_standalone.ipynb  config.yaml  pyproject.toml  requirements.txt  test_advanced_analytics.py
.github/workflows/: ci.yaml  codeql.yml  gemini-auto-triage.yml  gemini-invoke.yml  gemini-pr-review.yml  gemini-scheduled-triage.yml
notebooks/: 2025-08_CUD_Analysis_Platform.ipynb  AI_Powered_Analysis.ipynb  Automated_CUD_Analysis.ipynb  CUD_Analysis_Walkthrough.ipynb  CUD_Analysis_and_Reporting.ipynb  gemini_powered_analysis.ipynb  user_data_analysis.ipynb
profiling_reports/: billing_dataset_profile.html  recommendations_dataset_profile.html
scripts/: analyze_recommendations.py  fetch_cud_prices.py  setup_gcp_notebook.sh
src/: __init__.py  finops_advanced_analytics.py  finops_core_analysis.py
src/finops_analysis_platform/: advanced.py  cli.py  config_manager.py  core.py  data_loader.py  data_loader_protocol.py  discount_mapping.py  gcp_pricing.py  gemini_service.py  models.py  portfolio_recommender.py  profiler.py  recommendation_analyzer.py  reporting.py  risk_assessor.py  savings_calculator.py  spend_analyzer.py
src/finops_analysis_platform/config/: machine_discounts.yaml
src/finops_analysis_platform/prompts/: portfolio_optimization.txt
tests/: __init__.py  test_advanced.py  test_cli.py  test_config_manager.py  test_core.py  test_data_loader.py  test_discount_mapping.py  test_finops_advanced.py  test_gcp_pricing.py  test_gemini_service.py  test_portfolio_recommender.py  test_recommendation_analyzer.py  test_reporting.py  test_risk_assessor.py  test_savings_calculator.py  test_spend_analyzer.py
